update deno to v2.5.3

--- a/deno_component_workspace_example/deno/Cargo.toml
+++ b/deno_component_workspace_example/deno/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "deno"
-version = "2.5.2"
+version = "2.5.3"
 edition = "2024"
 
 [dependencies]
@@ -34,16 +34,16 @@ deno_ast = { version = "0.50.0", features = [
   "visit",
   "utils",
 ] }
-deno_bundle_runtime = "0.4.0"
+deno_bundle_runtime = "0.5.0"
 deno_cache_dir = { version = "=0.25.0", features = ["sync"] }
-deno_config = { version = "0.67.0", features = ["sync", "workspace"] }
+deno_config = { version = "0.68.0", features = ["sync", "workspace"] }
 deno_core = { version = "0.362.0", features = [
   "include_js_files_for_snapshotting",
 ] }
-deno_doc = { version = "=0.183.0", features = ["rust", "comrak"] }
+deno_doc = { version = "=0.185.0", features = ["rust", "comrak"] }
 deno_error = "=0.7.0"
-deno_graph = { version = "=0.100.1", default-features = false, features = ["fast_check"] }
-deno_lib = "0.35.0"
+deno_graph = { version = "=0.102.0", default-features = false, features = ["fast_check"] }
+deno_lib = "0.36.0"
 deno_lint = "=0.80.0"
 deno_lockfile = "=0.32.0"
 deno_media_type = { version = "=0.2.9", features = [
@@ -51,21 +51,21 @@ deno_media_type = { version = "=0.2.9", features = [
   "decoding",
   "module_specifier",
 ] }
-deno_npm = "=0.38.1"
-deno_npm_cache = "0.36.0"
-deno_npm_installer = "0.12.0"
-deno_package_json = { version = "0.19.0", features = ["sync"] }
+deno_npm = "=0.40.0"
+deno_npm_cache = "0.37.0"
+deno_npm_installer = "0.13.0"
+deno_package_json = { version = "0.20.0", features = ["sync"] }
 deno_panic = { version = "0.1.0", optional = true }
 deno_path_util = "=0.6.1"
-deno_resolver = { version = "0.48.0", features = ["deno_ast", "graph", "sync"] }
-deno_runtime = { version = "0.225.0", features = [
+deno_resolver = { version = "0.49.0", features = ["deno_ast", "graph", "sync"] }
+deno_runtime = { version = "0.226.0", features = [
   "include_js_files_for_snapshotting",
 ] }
 deno_semver = "=0.9.0"
 deno_signals = "0.8.0"
-deno_snapshots = "0.32.0"
+deno_snapshots = "0.33.0"
 deno_task_shell = "=0.26.0"
-deno_telemetry = "0.39.0"
+deno_telemetry = "0.40.0"
 deno_terminal = "=0.2.2"
 dhat = { version = "0.3.3", optional = true }
 dissimilar = "=1.0.9"
@@ -76,7 +76,7 @@ dprint-plugin-jupyter = "=0.2.0"
 dprint-plugin-markdown = "=0.19.0"
 dprint-plugin-typescript = "=0.95.11"
 esbuild_client = { version = "0.7.1", features = ["serde"] }
-eszip = "=0.99.0"
+eszip = "=0.102.0"
 fancy-regex = "0.16.2"
 faster-hex = "0.10.0"
 flate2 = { version = "1.1.2", features = ["default"] }
@@ -84,7 +84,7 @@ fs3 = "0.5.0"
 http = "1.3.1"
 http-body = "1.0.1"
 http-body-util = "0.1.3"
-import_map = { version = "0.23.0", features = ["ext"] }
+import_map = { version = "0.24.0", features = ["ext"] }
 indexmap = { version = "2", features = ["serde"] }
 jsonc-parser = { version = "0.26.3", features = ["cst", "serde"] }
 jupyter-protocol = "=0.8.0"
@@ -92,6 +92,8 @@ jupyter_runtime = { package = "runtimelib", version = "=0.28.0", default-feature
 keyring = { version = "3.6.3", features = ["apple-native", "sync-secret-service", "windows-native", "vendored"] }
 lazy-regex = "3.4.1"
 libc = "0.2.176"
+libffi = "=4.1.2"
+libffi-sys = "=3.3.3"
 libsui = "0.10.0"
 libz-sys = "1.1.22"
 log = { version = "0.4.28", features = ["serde"] }
@@ -100,7 +102,7 @@ lsp-types = "0.97.0"
 malva = "=0.12.1"
 markup_fmt = "=0.22.0"
 memchr = "2.7.6"
-node_resolver = { version = "0.55.0", features = ["graph", "sync"] }
+node_resolver = { version = "0.56.0", features = ["graph", "sync"] }
 notify = "=6.1.1"
 once_cell = "1.21.3"
 open = "5.3.2"
@@ -173,7 +175,7 @@ sys_traits = { version = "0.1.17", features = ["memory"] }
 [build-dependencies]
 deno_core = { version = "0.362.0", features = ["include_js_files_for_snapshotting"] }
 deno_error = "=0.7.0"
-deno_runtime = { version = "0.225.0", features = ["include_js_files_for_snapshotting", "only_snapshotted_js_sources"] }
+deno_runtime = { version = "0.226.0", features = ["include_js_files_for_snapshotting", "only_snapshotted_js_sources"] }
 flate2 = { version = "1.1.2", features = ["default"] }
 lazy-regex = "3.4.1"
 serde = { version = "=1.0.221", features = ["derive"] }
