--- a/deno_component_workspace_example/denort/Cargo.toml
+++ b/deno_component_workspace_example/denort/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "denort"
-version = "2.5.3"
+version = "2.5.4"
 edition = "2024"
 
 [[bin]]
@@ -17,26 +17,26 @@ harness = false
 async-trait = "0.1.89"
 bincode = "=1.3.3"
 deno_cache_dir = { version = "=0.25.0", features = ["sync"] }
-deno_config = { version = "0.68.0", features = ["sync", "workspace"] }
+deno_config = { version = "0.69.0", features = ["sync", "workspace"] }
 deno_core = { version = "0.362.0", features = ["include_js_files_for_snapshotting"] }
 deno_error = "=0.7.0"
-deno_lib = "0.36.0"
+deno_lib = "0.37.0"
 deno_media_type = { version = "=0.2.9", features = ["data_url", "decoding"] }
 deno_npm = "=0.40.0"
-deno_package_json = { version = "0.20.0", features = ["sync"] }
+deno_package_json = { version = "0.21.0", features = ["sync"] }
 deno_path_util = "=0.6.1"
-deno_resolver = { version = "0.49.0", features = ["sync"] }
-deno_runtime = { version = "0.226.0", features = ["include_js_files_for_snapshotting"] }
+deno_resolver = { version = "0.50.0", features = ["sync"] }
+deno_runtime = { version = "0.227.0", features = ["include_js_files_for_snapshotting"] }
 deno_semver = "=0.9.0"
-deno_snapshots = "0.33.0"
+deno_snapshots = "0.34.0"
 deno_terminal = "=0.2.2"
 import_map = { version = "0.24.0", features = ["ext"] }
 indexmap = { version = "2", features = ["serde"] }
 libsui = "0.10.0"
 log = { version = "0.4.28", features = ["serde"] }
-node_resolver = "0.56.0"
+node_resolver = "0.57.0"
 rustls = { version = "=0.23.28", default-features = false, features = ["logging", "std", "tls12", "aws_lc_rs"] }
-serde = { version = "=1.0.221", features = ["derive"] }
+serde = { version = "1.0.225", features = ["derive"] }
 serde_json = "1.0.145"
 sys_traits = { version = "0.1.17", features = ["getrandom", "filetime", "libc", "real", "strip_unc", "winapi"] }
 thiserror = "2.0.17"
@@ -46,11 +46,11 @@ url = { version = "2.5", features = ["serde", "expose_internals"] }
 
 [target.'cfg(windows)'.dependencies]
 memmap2 = "0.9.8"
-deno_subprocess_windows = "0.12.0"
+deno_subprocess_windows = "0.14.0"
 
 [dev-dependencies]
 sys_traits = { version = "0.1.17", features = ["memory"] }
 
 [build-dependencies]
 deno_core = { version = "0.362.0", features = ["include_js_files_for_snapshotting"] }
-deno_runtime = { version = "0.226.0", features = ["include_js_files_for_snapshotting", "only_snapshotted_js_sources"] }
+deno_runtime = { version = "0.227.0", features = ["include_js_files_for_snapshotting", "only_snapshotted_js_sources"] }
