--- a/deno_component_workspace_example/deno/Cargo.toml
+++ b/deno_component_workspace_example/deno/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "deno"
-version = "2.5.3"
+version = "2.5.4"
 edition = "2024"
 
 [dependencies]
-anstream = "0.6.20"
+anstream = "0.6.21"
 async-trait = "0.1.89"
 aws-lc-rs = "1.14.1"
 base64 = "0.22.1"
@@ -21,7 +21,7 @@ color-print = "0.3.7"
 console_static_text = "0.8.3"
 crossterm = "0.29.0"
 dashmap = "6.1.0"
-deno_ast = { version = "0.50.0", features = [
+deno_ast = { version = "0.50.3", features = [
   "bundler",
   "cjs",
   "codegen",
@@ -34,16 +34,16 @@ deno_ast = { version = "0.50.0", features = [
   "visit",
   "utils",
 ] }
-deno_bundle_runtime = "0.5.0"
+deno_bundle_runtime = "0.6.0"
 deno_cache_dir = { version = "=0.25.0", features = ["sync"] }
-deno_config = { version = "0.68.0", features = ["sync", "workspace"] }
+deno_config = { version = "0.69.0", features = ["sync", "workspace"] }
 deno_core = { version = "0.362.0", features = [
   "include_js_files_for_snapshotting",
 ] }
 deno_doc = { version = "=0.185.0", features = ["rust", "comrak"] }
 deno_error = "=0.7.0"
 deno_graph = { version = "=0.102.0", default-features = false, features = ["fast_check"] }
-deno_lib = "0.36.0"
+deno_lib = "0.37.0"
 deno_lint = "=0.80.0"
 deno_lockfile = "=0.32.0"
 deno_media_type = { version = "=0.2.9", features = [
@@ -52,20 +52,20 @@ deno_media_type = { version = "=0.2.9", features = [
   "module_specifier",
 ] }
 deno_npm = "=0.40.0"
-deno_npm_cache = "0.37.0"
-deno_npm_installer = "0.13.0"
-deno_package_json = { version = "0.20.0", features = ["sync"] }
+deno_npm_cache = "0.38.0"
+deno_npm_installer = "0.14.0"
+deno_package_json = { version = "0.21.0", features = ["sync"] }
 deno_panic = { version = "0.1.0", optional = true }
 deno_path_util = "=0.6.1"
-deno_resolver = { version = "0.49.0", features = ["deno_ast", "graph", "sync"] }
-deno_runtime = { version = "0.226.0", features = [
+deno_resolver = { version = "0.50.0", features = ["deno_ast", "graph", "sync"] }
+deno_runtime = { version = "0.227.0", features = [
   "include_js_files_for_snapshotting",
 ] }
 deno_semver = "=0.9.0"
-deno_signals = "0.8.0"
-deno_snapshots = "0.33.0"
+deno_signals = "0.10.0"
+deno_snapshots = "0.34.0"
 deno_task_shell = "=0.26.0"
-deno_telemetry = "0.40.0"
+deno_telemetry = "0.41.0"
 deno_terminal = "=0.2.2"
 dhat = { version = "0.3.3", optional = true }
 dissimilar = "=1.0.9"
@@ -79,7 +79,7 @@ esbuild_client = { version = "0.7.1", features = ["serde"] }
 eszip = "=0.102.0"
 fancy-regex = "0.16.2"
 faster-hex = "0.10.0"
-flate2 = { version = "1.1.2", features = ["default"] }
+flate2 = { version = "1.1.4", features = ["default"] }
 fs3 = "0.5.0"
 http = "1.3.1"
 http-body = "1.0.1"
@@ -97,12 +97,12 @@ libffi-sys = "=3.3.3"
 libsui = "0.10.0"
 libz-sys = "1.1.22"
 log = { version = "0.4.28", features = ["serde"] }
-lol_html = "2.6.0"
+lol_html = "2.7.0"
 lsp-types = "0.97.0"
 malva = "=0.12.1"
 markup_fmt = "=0.22.0"
 memchr = "2.7.6"
-node_resolver = { version = "0.56.0", features = ["graph", "sync"] }
+node_resolver = { version = "0.57.0", features = ["graph", "sync"] }
 notify = "=6.1.1"
 once_cell = "1.21.3"
 open = "5.3.2"
@@ -122,7 +122,7 @@ rustc-hash = "2.1.1"
 rustls = { version = "=0.23.28", default-features = false, features = ["logging", "std", "tls12", "aws_lc_rs"] }
 rustyline = "=13.0.0"
 rustyline-derive = "=0.7.0"
-serde = { version = "=1.0.221", features = ["derive"] }
+serde = { version = "1.0.225", features = ["derive"] }
 serde_json = "1.0.145"
 serde_repr = "0.1.20"
 sha2 = "0.10.9"
@@ -145,16 +145,16 @@ tracing-opentelemetry = { version = "0.32.0", optional = true }
 tracing-subscriber = { version = "0.3.20", features = ["env-filter"], optional = true }
 twox-hash = { version = "=2.1.0", features = ["std", "xxhash64"], default-features = false }
 typed-arena = "=2.0.2"
-unicode-width = "0.2.1"
+unicode-width = "0.2.2"
 uuid = { version = "1.18.1", features = ["serde"] }
 walkdir = "=2.5.0"
 weak-table = "0.3.2"
-zip = { version = "5.1.1", features = ["deflate-flate2"] }
+zip = { version = "6.0.0", features = ["deflate-flate2"] }
 zstd = "=0.13.2"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3.9", features = ["knownfolders", "mswsock", "objbase", "shlobj", "tlhelp32", "winbase", "winerror", "winsock2"] }
-deno_subprocess_windows = "0.12.0"
+deno_subprocess_windows = "0.14.0"
 
 [target.'cfg(unix)'.dependencies]
 nix = "=0.27.1"
@@ -164,7 +164,7 @@ shell-escape = "0.1.5"
 tokio-vsock = "0.7.2"
 
 [dev-dependencies]
-deno_bench_util = "0.211.0"
+deno_bench_util = "0.213.0"
 deno_core = { version = "0.362.0", features = [
   "include_js_files_for_snapshotting",
   "unsafe_use_unprotected_platform"
@@ -175,11 +175,9 @@ sys_traits = { version = "0.1.17", features = ["memory"] }
 [build-dependencies]
 deno_core = { version = "0.362.0", features = ["include_js_files_for_snapshotting"] }
 deno_error = "=0.7.0"
-deno_runtime = { version = "0.226.0", features = ["include_js_files_for_snapshotting", "only_snapshotted_js_sources"] }
-flate2 = { version = "1.1.2", features = ["default"] }
+deno_runtime = { version = "0.227.0", features = ["include_js_files_for_snapshotting", "only_snapshotted_js_sources"] }
+flate2 = { version = "1.1.4", features = ["default"] }
 lazy-regex = "3.4.1"
-serde = { version = "=1.0.221", features = ["derive"] }
-serde_json = "1.0.145"
 zstd = "=0.13.2"
 
 [features]
