add scraper parse html example

--- a/scraper_workspace_example/Cargo.toml
+++ b/scraper_workspace_example/Cargo.toml
@@ -6,4 +6,5 @@ members = [
   "scraper_example",
   "thirtyfour_basic_example",
   "thirtyfour_advance_example",
+  "scraper_parse_html_example",
 ]
