add spider basic example

--- a/scraper_workspace_example/Cargo.toml
+++ b/scraper_workspace_example/Cargo.toml
@@ -7,4 +7,5 @@ members = [
   "thirtyfour_basic_example",
   "thirtyfour_advance_example",
   "scraper_parse_html_example",
+  "spider_basic_example",
 ]
