add spider crawl example

--- a/scraper_workspace_example/Cargo.toml
+++ b/scraper_workspace_example/Cargo.toml
@@ -8,4 +8,5 @@ members = [
   "thirtyfour_advance_example",
   "scraper_parse_html_example",
   "spider_basic_example",
+  "spider_crawl_example",
 ]
