--- a/mimalloc_example/Cargo.toml
+++ b/mimalloc_example/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-mimalloc = { version = "0.1.48", features = ["v3"] }
+mimalloc = { version = "0.1.48", features = ["v3", "secure", "override"] }
