--- a/clickhouse_workspace_example/Cargo.toml
+++ b/clickhouse_workspace_example/Cargo.toml
@@ -5,5 +5,6 @@ resolver = "2"
 members = [
   # "clickhouse-rs_example",
   "clickhouse_example",
-  "clickhouse_async_insert_example"
+  "clickhouse_async_insert_example",
+  "clickhouse_cluster_example",
 ]
