add headless_chrome example

--- a/scraper_workspace_example/Cargo.toml
+++ b/scraper_workspace_example/Cargo.toml
@@ -10,4 +10,5 @@ members = [
   "spider_basic_example",
   "spider_crawl_example",
   "spider_scraper_basic_example",
+  "headless_chrome_example",
 ]
