--- a/scraper_workspace_example/Cargo.toml
+++ b/scraper_workspace_example/Cargo.toml
@@ -10,5 +10,5 @@ members = [
   "spider_basic_example",
   "spider_crawl_example",
   "spider_scraper_basic_example",
-  "headless_chrome_example",
+  "headless_chrome_example", "spider_csv_example",
 ]
