--- a/clickhouse_workspace_example/Cargo.toml
+++ b/clickhouse_workspace_example/Cargo.toml
@@ -7,4 +7,5 @@ members = [
   "clickhouse_example",
   "clickhouse_async_insert_example",
   "clickhouse_cluster_example",
+  "spider_clickhouse_example",
 ]
