--- a/clickhouse_workspace_example/spider_clickhouse_example/Cargo.toml
+++ b/clickhouse_workspace_example/spider_clickhouse_example/Cargo.toml
@@ -5,7 +5,13 @@ edition = "2024"
 
 [dependencies]
 axum = "0.8.7"
-clickhouse = "0.14.1"
+clickhouse = { version = "0.14.1", features = ["lz4", "rustls-tls"] }
+dotenvy = "0.15"
+hyper-rustls = { version = "0.27", default-features = true }
+hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
+rustls = "0.23"
+rustls-native-certs = "0.8"
+rustls-pemfile = "2.2"
 scraper = "0.24.0"
 serde = { version = "1.0.228", features = ["derive"] }
 spider = "2.38.23"
