--- a/clickhouse_workspace_example/.env-example
+++ b/clickhouse_workspace_example/.env-example
@@ -3,4 +3,4 @@ CH_NODES=https://localhost:8443,https://localhost:8444,https://localhost:8445,ht
 CH_USER=default
 CH_PASSWORD=changeme
 CH_DB=test
-CH_CA_CERT=clickhouse_workspace_example/tls/ca.crt
+CH_CA_CERT=tls/ca.crt
