add redis cluster

--- a/clickhouse_workspace_example/spider_clickhouse_example/.env-example
+++ b/clickhouse_workspace_example/spider_clickhouse_example/.env-example
@@ -4,3 +4,6 @@ CH_USER=default
 CH_PASSWORD=changeme
 CH_DB=test
 CH_CA_CERT=../clickhouse_workspace_example/tls/ca.crt
+REDIS_NODES=redis://localhost:7001,redis://localhost:7002,redis://localhost:7003,redis://localhost:7004,redis://localhost:7005,redis://localhost:7006
+REDIS_OPTIONAL=true
+REDIS_CONNECT_TIMEOUT_MS=5000
