--- a/clickhouse_workspace_example/spider_clickhouse_example/Cargo.toml
+++ b/clickhouse_workspace_example/spider_clickhouse_example/Cargo.toml
@@ -18,3 +18,4 @@ serde = { version = "1.0.228", features = ["derive"] }
 spider = "2.38.23"
 tokio = { version = "1.48.0", features = ["full"] }
 url = "2.5"
+redis = { version = "0.32", features = ["tokio-comp", "cluster-async"] }
