add once_cell, spite module

--- a/clickhouse_workspace_example/spider_clickhouse_example/.env-example
+++ b/clickhouse_workspace_example/spider_clickhouse_example/.env-example
@@ -3,7 +3,7 @@ CH_NODES=https://localhost:8443,https://localhost:8444,https://localhost:8445,ht
 CH_USER=default
 CH_PASSWORD=changeme
 CH_DB=test
-CH_CA_CERT=../clickhouse_workspace_example/tls/ca.crt
+CH_CA_CERT=../tls/ca.crt
 REDIS_NODES=redis://localhost:7001,redis://localhost:7002,redis://localhost:7003,redis://localhost:7004,redis://localhost:7005,redis://localhost:7006
 REDIS_OPTIONAL=true
 REDIS_CONNECT_TIMEOUT_MS=5000
