--- a/clickhouse_workspace_example/spider_clickhouse_example/Cargo.toml
+++ b/clickhouse_workspace_example/spider_clickhouse_example/Cargo.toml
@@ -9,6 +9,8 @@ clickhouse = { version = "0.14.1", features = ["lz4", "rustls-tls"] }
 dotenvy = "0.15"
 hyper-rustls = { version = "0.27", default-features = true }
 hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
+once_cell = "1.21.3"
+redis = { version = "0.32", features = ["tokio-comp", "cluster-async"] }
 reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "charset", "gzip", "brotli", "deflate"] }
 rustls = "0.23"
 rustls-native-certs = "0.8"
@@ -18,4 +20,3 @@ serde = { version = "1.0.228", features = ["derive"] }
 spider = "2.38.23"
 tokio = { version = "1.48.0", features = ["full"] }
 url = "2.5"
-redis = { version = "0.32", features = ["tokio-comp", "cluster-async"] }
