--- a/grpc_graphql_gateway_example/Cargo.toml
+++ b/grpc_graphql_gateway_example/Cargo.toml
@@ -6,9 +6,11 @@ edition = "2024"
 [dependencies]
 axum = "0.8.7"
 grpc_graphql_gateway = "0.1.3"
+prost = "0.14"
 tokio = { version = "1.48.0", features = ["full"] }
+tokio-stream = "0.1"
 tonic = "0.14.2"
-tracing = "0.1.43"
+tonic-prost = "0.14.2"
 
 [build-dependencies]
 tonic-prost-build = "0.14.2"
