--- a/tantivy_workspace_example/Cargo.toml
+++ b/tantivy_workspace_example/Cargo.toml
@@ -8,4 +8,5 @@ members = [
   "lindera_tantivy_ko_dic",
   "lindera_tantivy_tokenize_with_config",
   "lindera_tantivy_unidic",
+  "lindera_tokenize_example",
 ]
