--- a/axum_workspace_example/axum_server_example/Cargo.toml
+++ b/axum_workspace_example/axum_server_example/Cargo.toml
@@ -5,6 +5,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = "0.8.4"
-axum-server = { version = "0.7.2", features = ["rustls", "arc-swap", "rustls-pemfile", "tls-rustls", "tokio-rustls"] }
-tokio = { version = "1.47.1", features = ["full"] }
+axum = "0.8.7"
+axum-server = { version = "0.8.0", features = ["rustls", "arc-swap", "tls-rustls", "tokio-rustls"] }
+tokio = { version = "1.48.0", features = ["full"] }
