--- a/polars_example/Cargo.toml
+++ b/polars_example/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-polars = { version = "0.49.1", features = ["lazy", "csv"] }
+polars = { version = "0.52.0", features = ["lazy", "csv", "timezones"] }
