--- a/redis_workspace_example/redis_connection_manager_example/redis.conf
+++ b/redis_workspace_example/redis_connection_manager_example/redis.conf
@@ -49,7 +49,7 @@
 # Load modules at startup. If the server is not able to load modules
 # it will abort. It is possible to use multiple loadmodule directives.
 #
-loadmodule ./redisraft.so raft-log-filename ./data/node1/raft-log.db raft-addr 127.0.0.1:5001
+# loadmodule /path/to/my_module.so
 
 ################################## NETWORK #####################################
 
