--- a/libp2p_workspace_example/libp2p_browser_webrtc_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_browser_webrtc_example/Cargo.toml
@@ -7,28 +7,28 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-anyhow = "1.0.97"
+anyhow = "1.0.100"
 futures = "0.3.31"
-rand = "0.9.0"
-tracing = "0.1.41"
-tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
+rand = "0.9.2"
+tracing = "0.1.43"
+tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-axum = "0.8.3"
+axum = "0.8.7"
 libp2p = { version = "0.56", features = ["ed25519", "macros", "ping", "tokio"] }
-libp2p-webrtc = { version = "0.9.0-alpha", features = ["tokio"] }
-rust-embed = { version = "8.6.0", features = [
+libp2p-webrtc = { version = "0.9.0-alpha.1", features = ["tokio"] }
+rust-embed = { version = "8.9.0", features = [
   "include-exclude",
   "interpolate-folder-path",
 ] }
-tokio = { version = "1.44.1", features = ["macros", "net", "rt", "signal"] }
-tokio-util = { version = "0.7.14", features = ["compat"] }
+tokio = { version = "1.48.0", features = ["macros", "net", "rt", "signal"] }
+tokio-util = { version = "0.7.17", features = ["compat"] }
 tower = "0.5.2"
-tower-http = { version = "0.6.2", features = ["cors"] }
+tower-http = { version = "0.6.8", features = ["cors"] }
 mime_guess = "2.0.5"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-js-sys = "0.3.77"
+js-sys = "0.3.83"
 libp2p = { version = "0.56", features = [
   "ed25519",
   "macros",
@@ -37,9 +37,9 @@ libp2p = { version = "0.56", features = [
 ] }
 libp2p-webrtc-websys = { version = "0.4" }
 tracing-wasm = "0.2.1"
-wasm-bindgen = "0.2.100"
-wasm-bindgen-futures = "0.4.50"
-web-sys = { version = "0.3.77", features = [
+wasm-bindgen = "0.2.106"
+wasm-bindgen-futures = "0.4.56"
+web-sys = { version = "0.3.83", features = [
   "Document",
   "Element",
   "HtmlElement",
