comment some projects

--- a/libp2p_workspace_example/Cargo.toml
+++ b/libp2p_workspace_example/Cargo.toml
@@ -13,8 +13,8 @@ members = [
   "libp2p_kademlia_example",
   "libp2p_identity_ed25519_example",
   "libp2p_mdns_example",
-  "libp2p_tokio_autonat_server_example",
-  "libp2p_tokio_autonat_client_example",
+  #"libp2p_tokio_autonat_server_example",
+  #"libp2p_tokio_autonat_client_example",
   "libp2p_dcutr_example",
   "libp2p_tokio_distributed_key-value_store_example",
   "libp2p_tokio_file_sharing_example",
@@ -30,7 +30,7 @@ members = [
   "libp2p_tokio_discover_nodes_example",
   "libp2p_quic_server_example",
   "libp2p_quic_client_example",
-  "libp2p_misc_server_example",
+  #"libp2p_misc_server_example",
   "libp2p_peer_id_example",
   "libp2p_tokio_stream_example",
   "libp2p_tokio_stream_with_existing_key_example",
@@ -38,13 +38,13 @@ members = [
   "libp2p_tokio_upnp_example",
   "libp2p_authenticate_example",
   "libp2p_gossipsub_and_stream_example",
-  "libp2p_autonatv2_server_example",
-  "libp2p_autonatv2_client_example",
+  #"libp2p_autonatv2_server_example",
+  #"libp2p_autonatv2_client_example",
   "libp2p_libsecp256k1_secret_key_example",
   "libp2p_secp256k1_secret_key_example",
   "libp2p_request_response_server_example",
   "libp2p_request_response_client_example",
-  "libp2p_browser_webrtc_example",
+  #"libp2p_browser_webrtc_example",
   "libp2p_peer_id_from_secp256k1_public_key_example",
   "libp2p_peer_id_from_secp256k1_secret_key_example",
   "libp2p_peer_id_from_secp256k1_secret_key_alloy_example",
@@ -55,8 +55,8 @@ members = [
   "libp2p_pnet_presharedkey_example",
   "libp2p_client_reconnection_example",
   # "libp2p_perf_example",
-  "libp2p_p2prpc_example",
-  "poc_libpp2p_kademlia_example",
+  #"libp2p_p2prpc_example",
+  #"poc_libpp2p_kademlia_example",
   "libp2p_parse_dns_multiaddress_example",
   "libp2p_kad_a_example",
   "libp2p_kad_b_example",
@@ -67,10 +67,10 @@ members = [
   "libp2p_dns_client_example",
   "libp2p_quic_tls_server_example",
   "libp2p_quic_tls_client_example",
-  "libp2p_tuono_a_example",
-  "libp2p_tuono_b_example",
-  "libp2p_tuono_c1_example",
-  "libp2p_tuono_c2_example",
+  #"libp2p_tuono_a_example",
+  #"libp2p_tuono_b_example",
+  #"libp2p_tuono_c1_example",
+  #"libp2p_tuono_c2_example",
   "libp2p_multiaddr_example",
   "libp2p_debug_listener_example",
 ]
