--- a/openraft_workspace_example/mem-log/Cargo.toml
+++ b/openraft_workspace_example/mem-log/Cargo.toml
@@ -4,9 +4,7 @@ version = "0.1.0"
 readme = "README.md"
 
 edition = "2021"
-authors = [
-    "drdr xp <drdr.xp@gmail.com>",
-]
+authors = ["drdr xp <drdr.xp@gmail.com>"]
 categories = ["algorithms", "asynchronous", "data-structures"]
 description = "An example in-memory storage for `openraft`."
 homepage = "https://github.com/databendlabs/openraft"
@@ -14,17 +12,16 @@ keywords = ["raft", "consensus"]
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/databendlabs/openraft"
 
-[dependencies]
-openraft = { git = "https://github.com/databendlabs/openraft", rev = "54ffb00dbb8ed7518d0363c4846813761ff80e92", features = [
-  "serde",
-  "type-alias",
-] }
-
-tokio = { version = "1.46", default-features = false, features = ["sync"] }
+[package.metadata.docs.rs]
+all-features = true
 
 [features]
 
 serde = ["openraft/serde"]
 
-[package.metadata.docs.rs]
-all-features = true
+[dependencies]
+openraft = { git = "https://github.com/databendlabs/openraft", rev = "06911c90379b99ec067b62c03295468c296b64d0", default-features = false, features = [
+  "type-alias",
+  "tokio-rt",
+] }
+tokio = { version = "1.48", default-features = false, features = ["sync"] }
