--- a/openraft_workspace_example/raft_kv_memstore_network_v2/Cargo.toml
+++ b/openraft_workspace_example/raft_kv_memstore_network_v2/Cargo.toml
@@ -6,7 +6,10 @@ edition = "2021"
 [dependencies]
 futures = "0.3.31"
 mem-log = { path = "../mem-log", features = [] }
-openraft = { git = "https://github.com/databendlabs/openraft", features = ["serde", "type-alias"] }
+openraft = { git = "https://github.com/databendlabs/openraft", rev = "06911c90379b99ec067b62c03295468c296b64d0", features = [
+  "serde",
+  "type-alias",
+] }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 tokio = { version = "1.48", default-features = false, features = ["sync"] }
