--- a/openraft_workspace_example/raft_kv_memstore_grpc/Cargo.toml
+++ b/openraft_workspace_example/raft_kv_memstore_grpc/Cargo.toml
@@ -5,20 +5,22 @@ edition = "2024"
 
 [dependencies]
 bincode = "2.0.1"
-clap = { version = "4.5.41", features = ["derive", "env"] }
+clap = { version = "4.5.53", features = ["derive", "env"] }
 dashmap = "6.1.0"
 futures = "0.3.31"
-mem-log = { path = "../mem-log"}
-openraft = { git = "https://github.com/databendlabs/openraft", features = ["type-alias"] }
+mem-log = { path = "../mem-log" }
+openraft = { git = "https://github.com/databendlabs/openraft", rev = "06911c90379b99ec067b62c03295468c296b64d0", default-features = false, features = [
+  "type-alias",
+] }
 prost = "0.14.1"
-serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.140"
-tokio = { version = "1.46.1", features = ["full"] }
-tonic = "0.13.1"
-tonic-build = "0.13.1"
-tracing = "0.1.41"
-tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.145"
+tokio = { version = "1.48.0", features = ["full"] }
+tonic = "0.14.2"
+tonic-prost = "0.14.2"
+tracing = "0.1.44"
+tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
 
 [build-dependencies]
 prost-build = "0.14.1"
-tonic-build = "0.13.1"
+tonic-prost-build = "0.14.2"
