--- a/openraft_workspace_example/raft_kv_rocksdb/Cargo.toml
+++ b/openraft_workspace_example/raft_kv_rocksdb/Cargo.toml
@@ -2,27 +2,28 @@
 name = "raft_kv_rocksdb"
 version = "0.1.0"
 edition = "2021"
+
+[features]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "4.11.0"
+actix-web = "4.12.1"
 byteorder = "1.5.0"
-clap = { version = "4.5.41", features = ["derive", "env"] }
+clap = { version = "4.5.53", features = ["derive", "env"] }
 client-http = { path = "../client-http" }
+futures = "0.3.31"
 network-v1-http = { path = "../network-v1-http" }
 openraft = { git = "https://github.com/databendlabs/openraft", features = ["serde", "type-alias", "serde_json"] }
 openraft-rocksstore = { path = "../rocksstore" }
 reqwest = { version = "0.12", features = ["json"] }
-rocksdb = "0.23.0"
-serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.140"
-tokio = { version = "1.46.1", features = ["full"] }
-tracing = "0.1.41"
-tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
+rocksdb = "0.24.0"
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.145"
+tokio = { version = "1.48.0", features = ["full"] }
+tracing = "0.1.44"
+tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
 
 [dev-dependencies]
 maplit = "1.0.2"
-tempfile = { version = "3.20.0" }
-
-[features]
+tempfile = { version = "3.23.0" }
 
