--- a/openraft_workspace_example/client-http/Cargo.toml
+++ b/openraft_workspace_example/client-http/Cargo.toml
@@ -3,10 +3,8 @@ name = "client-http"
 version = "0.1.0"
 readme = "README.md"
 
-edition = "2021"
-authors = [
-  "drdr xp <drdr.xp@gmail.com>",
-]
+edition = "2024"
+authors = ["drdr xp <drdr.xp@gmail.com>"]
 categories = ["algorithms", "asynchronous", "data-structures"]
 description = "An example network implementation v1 built upon `openraft`."
 homepage = "https://github.com/databendlabs/openraft"
@@ -14,17 +12,19 @@ keywords = ["raft", "consensus", "network"]
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/databendlabs/openraft"
 
-[dependencies]
-openraft = { git = "https://github.com/databendlabs/openraft", features = ["type-alias"] }
-
-reqwest = { version = "0.12.22", features = ["json"] }
-serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.140"
-tokio = { version = "1.46.1", features = ["full"] }
-tracing = "0.1.41"
+[package.metadata.docs.rs]
+all-features = true
 
 [features]
 default = []
 
-[package.metadata.docs.rs]
-all-features = true
+[dependencies]
+openraft = { git = "https://github.com/databendlabs/openraft", rev = "06911c90379b99ec067b62c03295468c296b64d0", features = [
+  "serde",
+  "type-alias",
+] }
+reqwest = { version = "0.12.26", features = ["json"] }
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.145"
+tokio = { version = "1.48.0", features = ["full"] }
+tracing = "0.1.44"
