--- a/openraft_workspace_example/network-v1-http/Cargo.toml
+++ b/openraft_workspace_example/network-v1-http/Cargo.toml
@@ -3,7 +3,7 @@ name = "network-v1-http"
 version = "0.1.0"
 readme = "README.md"
 
-edition = "2021"
+edition = "2024"
 authors = [
   "drdr xp <drdr.xp@gmail.com>",
 ]
@@ -15,13 +15,15 @@ license = "MIT OR Apache-2.0"
 repository = "https://github.com/databendlabs/openraft"
 
 [dependencies]
-openraft = {git = "https://github.com/databendlabs/openraft", features = ["serde", "type-alias"]}
-
-reqwest = { version = "0.12.22", features = ["json"] }
-serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.140"
-tokio = { version = "1.46.1", features = ["full"] }
-tracing = "0.1.41"
+openraft = { git = "https://github.com/databendlabs/openraft", rev = "06911c90379b99ec067b62c03295468c296b64d0", features = [
+  "serde",
+  "type-alias",
+] }
+reqwest = { version = "0.12.26", features = ["json"] }
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.145"
+tokio = { version = "1.48.0", features = ["full"] }
+tracing = "0.1.44"
 
 [features]
 default = []
