--- a/openraft_workspace_example/raft_kv_memstore/Cargo.toml
+++ b/openraft_workspace_example/raft_kv_memstore/Cargo.toml
@@ -1,21 +1,26 @@
 [package]
 name = "raft_kv_memstore"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "4.11.0"
-clap = { version = "4.5.41", features = ["derive", "env"] }
+actix-web = "4.12.1"
+clap = { version = "4.5.53", features = ["derive", "env"] }
+client-http = { path = "../client-http" }
 env_logger = "0.11.8"
+futures = "0.3.31"
 mem-log = { path = "../mem-log" }
 network-v1-http = { path = "../network-v1-http" }
-openraft = {git = "https://github.com/databendlabs/openraft", features = ["serde", "type-alias"]}
+openraft = { git = "https://github.com/databendlabs/openraft", rev = "06911c90379b99ec067b62c03295468c296b64d0", features = [
+  "serde",
+  "type-alias",
+] }
 reqwest = { version = "0.12", features = ["json"] }
-serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.140"
-tokio = { version = "1.46.1", default-features = false, features = ["sync"] }
-tracing = "0.1.41"
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.145"
+tokio = { version = "1.48.0", default-features = false, features = ["sync"] }
+tracing = "0.1.44"
 tracing-futures = "0.2.5"
-tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
+tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
