--- a/openraft_workspace_example/chitchat_poem_tarpc_rocksdb_example/Cargo.toml
+++ b/openraft_workspace_example/chitchat_poem_tarpc_rocksdb_example/Cargo.toml
@@ -1,31 +1,31 @@
 [package]
 name = "chitchat_poem_tarpc_rocksdb_example"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.98"
+anyhow = "1.0.100"
 chitchat = { git = "https://github.com/quickwit-oss/chitchat"}
-openraft = { git = "https://github.com/databendlabs/openraft", features = ["serde", "type-alias"] }
-clap = { version = "4.5.41", features = ["derive", "env"] }
-console-subscriber = "0.4.1"
+openraft = { git = "https://github.com/databendlabs/openraft", rev = "06911c90379b99ec067b62c03295468c296b64d0", features = ["serde", "type-alias"]}
+clap = { version = "4.5.53", features = ["derive", "env"] }
+console-subscriber = "0.5.0"
 cool-id-generator = "1.0.1"
 env_logger = "0.11.8"
 once_cell = "1.21.3"
-poem = "3.1.11"
+poem = "3.1.12"
 poem-openapi = { version = "5", features = ["swagger-ui"] }
-serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.140"
-tokio = { version = "1.46.1", features = ["full"] }
-tracing = "0.1.41"
-tracing-subscriber = "0.3.19"
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.145"
+tokio = { version = "1.48.0", features = ["full"] }
+tracing = "0.1.44"
+tracing-subscriber = "0.3.22"
 futures = "0.3.31"
-tarpc = { version = "0.36.0", features = ["full"] }
+tarpc = { version = "0.37.0", features = ["full"] }
 byteorder = "1.5.0"
 reqwest = { version = "0.12", features = ["json"] }
-rocksdb = "0.23.0"
-thiserror = "2.0.12"
-async-trait = "0.1.88"
+rocksdb = "0.24.0"
+thiserror = "2.0.17"
+async-trait = "0.1.89"
 openraft-rocksstore = { path = "../rocksstore" }
